@@ -1,3 +1,11 @@
+2007-03-23  Priit Laes  <amd@store20.com>
+
+	* gnome-window-properties.c: (double_click_titlebar_changed_callback),
+	(reload_settings), (update_wm), (main): Deprecated GtkOptionMenu to
+	GtkComboBox conversion.
+	* gnome-window-properties.glade: Ditto.
+	Closes bug #421210.
+
 2007-02-22  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-window-properties.c: (alt_click_radio_toggled_callback),
